--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,11 @@
+1.4.0 - 07.08.09
+Restructured the implementation of easyXSS.Interface, this now creates its own easyXSS.Channel,
+just like easyXSS.Channel creates its own easyXSS.Transport.ITransport.
+The internals of this class has also been restructured and should be easier to understand.
+
+Breaking changes:
+The easyXSS.Interface constructor now takes the configuration of a channel instead of a ready channel.
+
 1.3.0 - 02.08.09
 Restructured the code again sot that it will be easier to understand.
 Changed to using the 'new classname' construct instead of easyXSS.createClassname
