--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,12 @@
+1.5.0 - 08.08.09
+Restructured the HashTransport so that all dependencies are contained in one class.
+Also removed the need to use the fragile window.open(.. method to get a reference
+to the window to read from.
+hash.html is now called with the version as a parameter. This should help to avoid the cached
+version being used accross version changes.
+Breaking changes:
+hash.html calls a new method with a new signature.
+
 1.4.0 - 07.08.09
 Renamed the library to easyXDM to avoid being associated with the XSS-vulnerability
 Alle references to easyXSS can be replaced with easyXDM
