--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,13 @@
+1.5.1 - 17.08.09
+Namespaces are now in lowercase. This makes it easier to distinguish between classes
+and namespaces.
+Refactored the createFrame method as we do no longer require the ability to name frames.
+Took away passing the version as a parameter to hash.html, versioning should be handled 
+by renaming the file or by other means.
+
+Breaking changes:
+Namespaces changed to all lowercase letters.
+
 1.5.0 - 08.08.09
 Restructured the HashTransport so that all dependencies are contained in one class.
 Also removed the need to use the fragile window.open(.. method to get a reference
