--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,8 @@
+1.5.3 - 06.09.09
+The transports now support using remote urls containing query parameters.
+Added the easyXDM.apply method, and also easyXMD.WidgetManager and easyXDM.Widget.
+The widget classes makes it extremely easy to support widgets.
+
 1.5.2 - 29.08.09
 Modified the HashTransport to using the resize event to trigger new messages to be read.
 This is a lot faster and less resource consuming than polling.
