--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,12 +1,12 @@
-2.0 xx.xx.xx
+2.0 18.03.10
 Refactored all the transport classes into stack elements.
-The transports are now exposed as a single Transport that selects the appropriate stack to initialize based on the avaiable features and config parameters.
-Removed the Channel class as this can easily be implemented when needed using the Transport class and JSON.parse/stringify.
+The transports are now exposed as a single Socket that selects the appropriate stack to initialize based on the available features and config parameters.
+Removed the Channel class as this can easily be implemented when needed using the Socket class and JSON.parse/stringify.
 Refactored the Interface class and renamed it Rpc as this is more descriptive.
 The optional onReady method is now a member of the config argument instead of being a separate one.
 Removed the serializing namespace as this was not used internally, and as it can easily be injected when needed.
 Renamed the methods for adding and removing events to on and un.
-  
+The HashTransport is now only used when access to name.html (old hash.html) is not available.
 
 1.8.0 27.02.10
 Both the HashTransport and the Nametransport has received a major overhaul.
