--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,11 @@
+2.1.0 18.04.10
+The Rpc behavior is now using the JSON-PRC 2.0 protocol, and will now also support an error callback.
+The Rpc class will also make sure that the serializer being used actually works, and so is not wrecked by the inclusion
+of PrototypeJs and other libraries that interferes with HTML5's JSON object. 
+The xhr.html file is now completely self-contained and now uses separate callbacks for success and error.
+Lots of small changes to improve scope lookup, and to improve minifying the code.
+
+
 2.0.1 27.03.10
 See commit log at github
 github.com/oyvindkinsey/easyXDM
