--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,7 @@
+2.3.3 18.06.10
+Fixed http://github.com/oyvindkinsey/easyXDM/issues/issue/15
+Fixed http://github.com/oyvindkinsey/easyXDM/issues/issue/17
+
 2.3.2 05.06.10
 Improved the ajax feature - this is now propely implemented and which should make the xhr.html file more suiting.
 Minor security fixes to the NixTransport.
