New feature and bug-fix release

--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,3 +1,8 @@
+2.4.1 25.07.10
+Fixed http://github.com/oyvindkinsey/easyXDM/issues/issue/22
+Implemented http://github.com/oyvindkinsey/easyXDM/issues/issue/20
+Fixed some minor issues relating to ajax.
+
 2.4.0 20.06.10
 Implemented http://github.com/oyvindkinsey/easyXDM/issues/19
 You can now interact with the Socket/Rpc prior to the onReady event being fired.
